fixed overflow issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@ body {
   .bggrad1 {
     height: 85px;
     width: 85px;
-    top: 32.8%;
+    top: 29.5%;
     left: 25.21%;
   }
 }
